[package]
name = "ron-crdt"
version = "0.3.2"
authors = [ "Marcus Brinkmann <marcus.brinkmann@ruhr-uni-bochum.de>", "Kai Michaelis <seu@p8n.io>" ]
description = "Replicated Object Notation for Rust"
keywords = ["crdt", "ron"]
categories = ["parser-implementations"]
license = "LGPL-2.1-or-later OR MIT"
readme = "README.md"
repository = "https://github.com/flanfly/ron-crdt"
documentation = "https://docs.rs/ron-crdt/"

[dependencies]
ron-uuid = "0"
smallvec = "0.6"
log = "0.4"

[dev-dependencies]
simple_logger = "0.5"
